examples/test/testpolicy8832.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8832
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key39: value41
      key45: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value44
          key27: value30
          key45: value16
      podSelector:
        matchLabels:
          key17: value7
          key31: value7
